--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -293,6 +293,7 @@
     <Content Include="Views\Home\Signin.cshtml" />
     <Content Include="Views\Home\SuperMarketList.cshtml" />
     <Content Include="Views\Home\Options.cshtml" />
+    <Content Include="Views\Home\ProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
