--- a/MarketPricingSystem/MarketPricingSystem/packages.config
+++ b/MarketPricingSystem/MarketPricingSystem/packages.config
@@ -38,12 +38,13 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="MySql.Data" version="8.0.30" targetFramework="net481" />
   <package id="MySql.Data.EntityFrameworkCore" version="8.0.22" targetFramework="net481" />
+  <package id="MySqlConnector" version="2.1.13" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net481" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net481" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net481" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net481" />
   <package id="System.Memory" version="4.5.4" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net481" />
