--- a/MarketPricingSystem/MarketPricingSystem/Web.config
+++ b/MarketPricingSystem/MarketPricingSystem/Web.config
@@ -108,6 +108,10 @@
         <assemblyIdentity name="Microsoft.EntityFrameworkCore.Relational" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.28.0" newVersion="3.1.28.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.1" newVersion="5.0.0.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
