--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -253,6 +253,8 @@
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\Usersphonenumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\AllProducts.cs" />
+    <Compile Include="ViewModel\productvalue.cs" />
     <Compile Include="ViewModel\productdetails.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -298,6 +300,9 @@
     <Content Include="Views\Home\SuperMarketList.cshtml" />
     <Content Include="Views\Home\Options.cshtml" />
     <Content Include="Views\Home\ProductList.cshtml" />
+    <Content Include="Views\Home\Allproducts.cshtml" />
+    <Content Include="Views\Home\GetCheapestproduct.cshtml" />
+    <Content Include="Views\Home\GetExpensiveproduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
