--- a/MarketPricingSystem/MarketPricingSystem/bin/MarketPricingSystem.dll.config
+++ b/MarketPricingSystem/MarketPricingSystem/bin/MarketPricingSystem.dll.config
@@ -10,10 +10,27 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	
+	
+	
+	
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
+
+	  <authentication mode="Forms">
+		  <forms loginUrl="Account/Signin"></forms>
+	  </authentication>
+	 
+	  
+	  
+
   </system.web>
+	
+	
+	
+	
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -121,9 +138,6 @@
     </compilers>
   </system.codedom>
 
-	<connectionStrings>
-		<add name="MySQLConnection" connectionString="Server=localhost;                     user id=root;                     password=123;                     persist security info=True;                     database=marketpricing" providerName="System.Data.SqlClient" />
-		
-	</connectionStrings>
+	
 	
 </configuration>
