--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -231,6 +231,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\SupermarketController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="CustomAuthorization\customedashboardAuthorization.cs" />
@@ -259,7 +260,7 @@
     <Compile Include="Models\Userroles.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\AllProducts.cs" />
+    <Compile Include="ViewModel\product.cs" />
     <Compile Include="ViewModel\productvalue.cs" />
     <Compile Include="ViewModel\productdetails.cs" />
     <Compile Include="ViewModel\signin.cs" />
@@ -323,6 +324,10 @@
     <Content Include="Views\Supermarket\Deletesupermarket.cshtml" />
     <Content Include="Views\Supermarket\Updatesupermarket.cshtml" />
     <Content Include="Views\Supermarket\Createsupermarket.cshtml" />
+    <Content Include="Views\Products\AllProducts.cshtml" />
+    <Content Include="Views\Products\Createproduct.cshtml" />
+    <Content Include="Views\Products\Deleteproduct.cshtml" />
+    <Content Include="Views\Products\Updateproduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
