--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -231,6 +231,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\SupermarketController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -328,6 +329,10 @@
     <Content Include="Views\Products\Createproduct.cshtml" />
     <Content Include="Views\Products\Deleteproduct.cshtml" />
     <Content Include="Views\Products\Updateproduct.cshtml" />
+    <Content Include="Views\Category\AllCategories.cshtml" />
+    <Content Include="Views\Category\Deletecategory.cshtml" />
+    <Content Include="Views\Category\Createcategory.cshtml" />
+    <Content Include="Views\Category\Updatecategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
