--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -341,6 +341,7 @@
     <Content Include="Views\Others\Allusers.cshtml" />
     <Content Include="Views\Others\Userroles.cshtml" />
     <Content Include="Views\Others\Deleteuser.cshtml" />
+    <Content Include="Views\Others\Createuser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
