--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -261,8 +261,7 @@
     <Compile Include="ViewModel\productandcategory.cs" />
     <Compile Include="ViewModel\productvalue.cs" />
     <Compile Include="ViewModel\productdetails.cs" />
-    <Compile Include="ViewModel\RolesandPermissions.cs" />
-    <Compile Include="ViewModel\signin.cs" />
+    <Compile Include="ViewModel\Userdetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -336,7 +335,6 @@
     <Content Include="Views\Roles\Createrole.cshtml" />
     <Content Include="Views\Others\Allusers.cshtml" />
     <Content Include="Views\Others\Userroles.cshtml" />
-    <Content Include="Views\Others\Deleteuser.cshtml" />
     <Content Include="Views\Others\Createuser.cshtml" />
     <Content Include="Views\Users\Settings.cshtml" />
   </ItemGroup>
