--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Models\Supermarket.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="security\EncryptandDecrypt.cs" />
     <Compile Include="ViewModel\marketandproducts.cs" />
     <Compile Include="ViewModel\marketidwithproducts.cs" />
     <Compile Include="ViewModel\product.cs" />
@@ -349,7 +350,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="security\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
