All cdns downloaded

--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -275,7 +275,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Dtablestyle.css" />
     <Content Include="Content\expensive-cheapest.css" />
+    <Content Include="Content\HomedataTables.bootstrap4.min.css" />
+    <Content Include="Content\homedatatables.css" />
     <Content Include="Content\options.css" />
     <Content Include="Content\Settings.css" />
     <Content Include="Content\style.css" />
@@ -286,12 +289,24 @@
     <Content Include="Content\Site.css" />
     <Content Include="Images\bag.svg" />
     <Content Include="Images\dollar.svg" />
+    <Content Include="Images\icon-calculator.svg" />
+    <Content Include="Images\icon-karma.svg" />
+    <Content Include="Images\icon-team-builder.svg" />
     <Content Include="Images\icon.svg" />
+    <Content Include="Images\magnifier.svg" />
+    <Content Include="Images\productvalue.jpg" />
+    <Content Include="Images\productvalue2.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\expensive-cheapest.js" />
+    <Content Include="Scripts\HomedataTables.bootstrap4.min.js" />
+    <Content Include="Scripts\Homejquery-3.5.1.js" />
+    <Content Include="Scripts\Homejquery.dataTables.min.js" />
     <Content Include="Scripts\jquery-3.6.1.js" />
+    <Content Include="Scripts\simple-datatables%40latest.js" />
+    <Content Include="Scripts\sweetalert2%4011.js" />
+    <Content Include="Scripts\userlayoutbootstrap.bundle.min.js" />
     <Content Include="Scripts\usersdatatables.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
