--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SupermarketController.cs" />
     <Compile Include="Controllers\SupermarketproductsController.cs" />
+    <Compile Include="Controllers\TrackController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -364,6 +365,7 @@
     <Content Include="Views\Supermarketproducts\Createproduct.cshtml" />
     <Content Include="Views\Supermarketproducts\Updateproductprice.cshtml" />
     <Content Include="Views\Roles\Updaterole.cshtml" />
+    <Content Include="Views\Track\Choose.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
