--- a/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
+++ b/MarketPricingSystem/MarketPricingSystem/MarketPricingSystem.csproj
@@ -366,6 +366,8 @@
     <Content Include="Views\Supermarketproducts\Updateproductprice.cshtml" />
     <Content Include="Views\Roles\Updaterole.cshtml" />
     <Content Include="Views\Track\Choose.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
